CHANGES IN VERSION 1.3.14
------------------------
 o subview and inset now supports annotating with img files <2016-02-23, Tue>
 
CHANGES IN VERSION 1.3.13
------------------------
 o add example of rescale_tree function in treeAnnotation.Rmd <2016-02-07, Sun>
 o geom_cladelabel work with collapse <2016-02-07, Sun>
   + see https://github.com/GuangchuangYu/ggtree/issues/38 

CHANGES IN VERSION 1.3.12
------------------------
 o exchange function name of geom_tree and geom_tree2  <2016-01-25, Mon>
 o solved issues of geom_tree2 <2016-01-25, Mon>
   + https://github.com/hadley/ggplot2/issues/1512
 o colnames_level parameter in gheatmap <2016-01-25, Mon>
 o raxml2nwk function for converting raxml bootstrap tree to newick format <2016-01-25, Mon> 
 
CHANGES IN VERSION 1.3.11
------------------------
 o solved issues of geom_tree2 <2016-01-25, Mon>
   + https://github.com/GuangchuangYu/ggtree/issues/36
 o change compute_group() to compute_panel in geom_tree2() <2016-01-21, Thu>
   + fixed issue, https://github.com/GuangchuangYu/ggtree/issues/36
 o support phyloseq object <2016-01-21, Thu>
 o update geom_point2, geom_text2 and geom_segment2 to support setup_tree_data <2016-01-21, Thu>
 o implement geom_tree2 layer that support duplicated node records via the setup_tree_data function <2016-01-21, Thu>
 o rescale_tree function for rescaling branch length of tree object <2016-01-20, Wed>
 o upgrade set_branch_length, now branch can be rescaled using feature in extraInfo slot <2016-01-20, Wed>
 
CHANGES IN VERSION 1.3.10
------------------------
 o remove dependency of gridExtra by implementing multiplot function instead of using grid.arrange <2016-01-20, Wed>
 o remove dependency of colorspace <2016-01-20, Wed>
 o support phylip tree format and update vignette of phylip example <2016-01-15, Fri>

CHANGES IN VERSION 1.3.9
------------------------
 o optimize getYcoord <2016-01-14, Thu>
 o add 'multiPhylo' example in 'Tree Visualization' vignette <2016-01-13, Wed>